[gd_scene load_steps=6 format=3 uid="uid://cf5bovrtg6c85"]

[ext_resource type="Script" uid="uid://b653v15af03ax" path="res://scripts/hacking_box.gd" id="1_r0tax"]
[ext_resource type="PackedScene" uid="uid://0p6doepjcjw2" path="res://scenes/target_card.tscn" id="2_3f8mw"]
[ext_resource type="PackedScene" uid="uid://bcqnb6ti2stem" path="res://scenes/person_card.tscn" id="3_84vjy"]
[ext_resource type="PackedScene" uid="uid://bkihh0ts7l5gf" path="res://scenes/hack_container.tscn" id="4_84no8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0tax"]
bg_color = Color(0.0431373, 0.054902, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="HackingBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r0tax")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("StyleBoxFlat_r0tax")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="TargetsContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="TargetCard" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard2" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard3" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard4" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard5" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard6" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard7" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard8" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard9" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard10" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard11" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="TargetCard12" parent="PanelContainer/MarginContainer/TargetsContainer" instance=ExtResource("2_3f8mw")]
layout_mode = 2

[node name="PersonsContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="PersonCard" parent="PanelContainer/MarginContainer/PersonsContainer" instance=ExtResource("3_84vjy")]
layout_mode = 2

[node name="PersonCard2" parent="PanelContainer/MarginContainer/PersonsContainer" instance=ExtResource("3_84vjy")]
layout_mode = 2

[node name="PersonCard3" parent="PanelContainer/MarginContainer/PersonsContainer" instance=ExtResource("3_84vjy")]
layout_mode = 2

[node name="PersonCard4" parent="PanelContainer/MarginContainer/PersonsContainer" instance=ExtResource("3_84vjy")]
layout_mode = 2

[node name="PersonCard5" parent="PanelContainer/MarginContainer/PersonsContainer" instance=ExtResource("3_84vjy")]
layout_mode = 2

[node name="HackContainer" parent="PanelContainer/MarginContainer" instance=ExtResource("4_84no8")]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = -9.0
offset_right = 769.0
offset_bottom = 14.0
bbcode_enabled = true
text = "[bgcolor=#0b0e11]Hacking[/bgcolor]"
fit_content = true
